@@ -1,28 +1,162 @@
-#!/usr/bin/python
+#!/usr/bin/env python
+#
+# (c) 2006, 2007 Joseph Jezak
+# (c) 2007 Nathan Smith <ndansmith@gmail.com>
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, see <http://www.gnu.org/licenses/>.
 
-######################################################################
-### Parse the input to decide which frontend to load (dialog, gtk, qt)
-### different versions are started with different names:
-### mol-cfg-gtk == gtk version, etc.
-######################################################################
-
+import sys
+from getopt import gnu_getopt
 try:
-	import sys
 	### Import the backend
 	from mol_cfg_helper import *
-
-	### If the user wants the gtk frontend
-	if sys.argv[1] == "-gtk":
-		from mol_cfg_gtk import *
-	### If the user wants the qt frontend
-	elif sys.argv[1] == "-qt":
-		from mol_cfg_qt import *
-	### The user gets the dialog based frontend otherwise...
-	else:
-		from mol_cfg_dialog import *
-		mol_cfg_dialog_init()
 
 except ImportError, e:
 	print "Module loading failed with: " + str(e)
 	print "Please check that MOL is installed correctly!"
-	sys.exit()
+	sys.exit(1)
+
+class Startmol:
+	def __init__(self):
+		### Initialize variables
+		self.gtk = False
+		self.qt = False
+		self.help = False
+		self.version = False
+		self.profiles = ""
+
+		### Get the command-line arguments
+		self.parse_args()
+
+		### Help dialog trumps
+		if (self.help):
+			self.show_help()
+
+		### MOL cannot load more than one profile at a time from the command line
+		if len(self.profiles) > 1:
+			print "You can only pass one profile to MOL at a time."
+			print "You passed the following profiles:"
+			for profile in self.profiles:
+				print profile
+			sys.exit(1)
+		### Boot the selected profile, skip the GUI
+		elif len(self.profiles) == 1:
+			self.boot_mol()
+
+		### Run the GUI if no profiles are passed
+		else:
+			self.start_gui()
+
+	### Display help text
+	def show_help(self):
+		self.help_text = """Usage: startmol [OPTIONS] 
+Starts Mac-on-Linux (MOL)
+ 
+Graphical User Interface:
+  -g,  --gtk           open the GTK-based user interface
+  -q,  --qt            open the Qt-based user interface
+  (no arguments)       open the console user interface
+
+Kernel Module Loading:
+  -e,  --exact         require an exact kernel version match
+  -a                   allow a small kernel module version mismatch
+  -l,  --loadonly      do not start MOL, just load the kernel module(s)
+       --list          list available MOL kernel modules
+ 
+Client OS Selection:
+       --test          run self-test and exit
+       --newworld      Boot Mac OS (classic) the "newworld" way [default]
+       --oldworld      Boot Mac OS (classic) the "oldworld" way
+  -X,  --osx           Boot Mac OS X
+       --linux         Boot Linux
+       --elf=image     run statically linked ELF-image inside MOL
+ 
+Commonly Used Switches:
+       --cdboot        boot from CD (OS must be specified too)
+       --keyconfig     start the keyboard configuration tool
+ 
+Configuration Tweaking:
+       --alt           use alternate configuration
+  -num --session=num   run as session <num>
+       --ram=size      RAM size (in megabytes)
+       --config=str    set the 'config' variable to str
+       --res=str       add molrc resource (root only)
+       --kernel=kernel Specify the linux kernel to be run by MOL
+ 
+Miscellaneous:
+  -h,  --help          display this help text and exit
+  -V,  --version       output version information and exit
+  -d,  --debug         invoke the MOL debugger
+  -x,                  wait for the debugger (moldeb) to be started
+ 
+Uncommon Options:
+       --vt=num        use VT<num> for full-screen video
+       --detach        detach TTY
+       --datadir=dir   set the MOL data directory
+       --libdir=dir    set the MOL library directory
+       --zapnvram      clear NVRAM
+       --noautoboot    enter Open Firmware (if OF is used)
+ 
+For more information, please visit <http://mac-on-linux.sourceforge.net>."""
+		print self.help_text
+		sys.exit(0)
+
+	### ARgument parsing
+	def parse_args(self):
+		### Parse the arguments or fail
+		try:
+			self.opts, self.profiles = gnu_getopt(sys.argv[1:], "VXadeghln:qx", ["alt","cdboot","config=","datadir=","debug","detach","elf=","exact","gtk","help","kernel=","keyconfig","libdir=","linux","list","loadonly","newworld","noautoboot","oldworld","osx","qt","ram=","res=","session=","test","version"."vt=","zapnvram"])
+		except getopt.GetoptError:
+			sys.exit(1)
+		### Set values based on options
+		### TODO implement all options
+		for option, data in self.opts:
+			if option in ("-g","--gtk"):
+				self.gtk = True
+			if option in ("-q","--qt"):
+				self.qt = True
+			if option in ("-h","--help"):
+				self.help = True 
+			if option in ("-V","--version"):
+				self.version = True
+
+	### Start one of the GUIs:
+	def start_gui(self):
+		### GTK
+		if (self.gtk):
+			import mol_cfg_gtk
+			mol_cfg_gtk.mol_cfg_gtk_init()
+
+		### QT
+		### FIXME Readd QT
+	#	elif (self.qt):
+	#		import mol_cfg_qt
+	#		mol_cfg_qt.mol_cfg_qt_init()
+
+		### Dialog
+		else:
+			import mol_cfg_dialog
+			mol_cfg_dialog.mol_cfg_dialog_init()
+
+	### Grab all of the options and boot mol
+	### TODO finish this
+	def boot_mol(self):
+		pass
+
+### Start er up
+if __name__ == '__main__':
+	mol = Startmol()
+
+# TODO:
+# Version dialog
