@@ -1,3 +1,6 @@
+2007-07-23 Nathan Smith <ndansmith@gmail.com>
+	* Started work on startmol conversion to python
+
 2007-06-30 Nathan Smith <ndansmith@gmail.com>
 	* GTK: Bug fixes
 	* GTK: Added CD Boot option
